# aui-next-generator

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: cli.rs  config.rs  files.rs  generator.rs  lib.rs  main.rs  validation.rs
tests/: integration_tests.rs
