[package]
name = "aui-next-generator"
version = "0.1.0"
edition = "2024"
description = "CLI tool to generate Next.js projects with Tailwind CSS and ESLint"
license = "MIT"
authors = ["theerakanzero@gmail.com"]

[[bin]]
name = "aui-next-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.10"
colored = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "4.4"
