[package]
name = "aui-next-generator"
version = "0.1.0"
edition = "2021"
description = "CLI tool to generate Next.js projects with Tailwind CSS and ESLint"
license = "MIT"
authors = ["theerakanzero@gmail.com"]
repository = "https://github.com/Zero1009/aui-next-generator"
homepage = "https://github.com/Zero1009/aui-next-generator"
documentation = "https://docs.rs/aui-next-generator"
keywords = ["nextjs", "tailwind", "generator", "cli", "typescript"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "aui-next-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.12"
colored = "3.0"
anyhow = "1.0"
which = "8.0"
