[package]
name = "aui-next-generator"
version = "0.2.0"
edition = "2021"
description = "CLI tool to generate Next.js projects with Tailwind CSS, TypeScript, ESLint, and optional React Query integration"
license = "MIT"
authors = ["theerakanzero@gmail.com"]
repository = "https://github.com/Zero1009/aui-next-generator"
homepage = "https://github.com/Zero1009/aui-next-generator"
documentation = "https://docs.rs/aui-next-generator"
keywords = ["nextjs", "tailwind", "generator", "cli", "typescript"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "aui-next-gen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.12"
colored = "3.0"
anyhow = "1.0"
which = "8.0"

[dev-dependencies]
tempfile = "3.0"
assert_fs = "1.0"
predicates = "3.0"
serial_test = "3.0"
